Wiring up display

--- a/index.html
+++ b/index.html
@@ -119,6 +119,82 @@
     </div>
     <div id="display-section" class="hidden section-div">
         <h2>Display Section</h2>
+        <div id="logo"></div>
+        <div id="sheet-name"></div>
+        <div id="sheet-info"></div>
+        <div id="sheet-stats">
+            <div id="str">
+                <p>STRENGTH</p>
+                <p id="str-stat"></p>
+                <p id="str-mod"></p>
+            </div>
+            <div id="dex">
+                <p>DEXTERITY</p>
+                <p id="dex-stat"></p>
+                <p id="dex-mod"></p>
+            </div>
+            <div id="con">
+                <p>CONSTITUTION</p>
+                <p id="con-stat"></p>
+                <p id="con-mod"></p>
+            </div>
+            <div id="int">
+                <p>INTELLIGENCE</p>
+                <p id="int-stat"></p>
+                <p id="int-mod"></p>
+            </div>
+            <div id="wis">
+                <p>WISDOM</p>
+                <p id="wis-stat"></p>
+                <p id="wis-mod"></p>
+            </div>
+            <div id="cha">
+                <p>CHARISMA</p>
+                <p id="cha-stat"></p>
+                <p id="cha-mod"></p>
+            </div>
+        </div>
+        <div id="sheet-profs">
+            <div id="sheet-prof-bonus"></div>
+            <div id="sheet-saving-throws">
+                <div id="str-saving-throw">
+                    <div id="str-saving-throw-prof" class="bubble"></div>
+                    <div id="str-saving-throw-mod"></div>
+                    <div>Strength</div>
+                </div>
+                <div id="dex-saving-throw">
+                    <div id="dex-saving-throw-prof" class="bubble"></div>
+                    <div id="dex-saving-throw-mod"></div>
+                    <div>Dexterity</div>
+                </div>
+                <div id="con-saving-throw">
+                    <div id="con-saving-throw-prof" class="bubble"></div>
+                    <div id="con-saving-throw-mod"></div>
+                    <div>Constitution</div>
+                </div>
+                <div id="int-saving-throw">
+                    <div id="int-saving-throw-prof" class="bubble"></div>
+                    <div id="int-saving-throw-mod"></div>
+                    <div>Intelligence</div>
+                </div>
+                <div id="wis-saving-throw">
+                    <div id="wis-saving-throw-prof" class="bubble"></div>
+                    <div id="wis-saving-throw-mod"></div>
+                    <div>Wisdom</div>
+                </div>
+                <div id="cha-saving-throw">
+                    <div id="cha-saving-throw-prof" class="bubble"></div>
+                    <div id="cha-saving-throw-mod"></div>
+                    <div>Charisma</div>
+                </div>
+                <p>SAVING THROWS</p>
+            </div>
+            <div id="sheet-skills"></div>
+        </div>
+        <div id="sheet-passive-wisdom"></div>
+        <div id="sheet-other-profs"></div>
+        <div id="sheet-defense"></div>
+        <div id="sheet-traits"></div>
     </div>
     <div id="overlay" class="overlay hidden"></div>
     <div id="modal" class="modal hidden"></div>
@@ -126,5 +202,6 @@
 <script src="fetchs.js"></script>
 <script src="utils.js"></script>
 <script src="characterCreation.js"></script>
+<script src="characterSheet.js"></script>
 
 </html>
